# wavetableDraw

./: .gitmodules  README.md  bun.lockb  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/lib/: Controls.svelte  WaveTable.svelte
src/routes/: +page.svelte
