[package]
name = "sailor"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "sailor_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
cpal = "0.15.2"
anyhow = "1.0.79"
serde = { version = "1", features = ["derive", "alloc", "std"] }
serde_json = "1"
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
tokio = { version = "1.38.0", features = ["sync"] }
rust_dsp = {git = "https://github.com/vsandstrom/rust_dsp"}
# wavetable = { path = "../rust_dsp/wavetable" }
# interpolation = { path = "../rust_dsp/interpolation" }
# envelope = { path = "../rust_dsp/envelope" }
# waveshape = { path = "../rust_dsp/waveshape" }
# vector = { path = "../rust_dsp/vector" }
# trig = { path = "../rust_dsp/trig" }
# dsp = { path = "../rust_dsp/dsp" }
tauri-cli = "1.5.14"
atomic_float = "1.0.0"


